[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/menus/characterBlock.gd" type="Script" id=1]
[ext_resource path="res://themes/playerPanelText.tres" type="Theme" id=2]
[ext_resource path="res://art/char_select.png" type="Texture" id=3]
[ext_resource path="res://art/menus/charBlock.png" type="Texture" id=5]
[ext_resource path="res://art/menus/menu_arrow.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 1830, 0, 305, 730 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 2135, 0, 305, 730 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 610, 0, 305, 730 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 915, 0, 305, 730 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 1220, 0, 305, 730 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 1525, 0, 305, 730 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 305, 730 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 305, 0, 305, 730 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 2440, 0, 305, 730 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 2745, 0, 305, 730 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "Sprig",
"speed": 0.0
}, {
"frames": [  ],
"loop": false,
"name": "Banne",
"speed": 0.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Sasha",
"speed": 0.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "Marcy",
"speed": 0.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "Anne",
"speed": 0.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "Maggie",
"speed": 0.0
} ]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("faces:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "bounce"
length = 0.5
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("faces:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.116667, 0.183333, 0.25 ),
"transitions": PoolRealArray( 0.5, -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 10 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("faces:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("faces:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("faces:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[node name="characterBlock" type="Control"]
margin_right = 320.0
margin_bottom = 500.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 315.0
margin_bottom = 715.0
color = Color( 0.1875, 0.367676, 0.75, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="faces" type="AnimatedSprite" parent="."]
position = Vector2( 8, 0 )
frames = SubResource( 1 )
animation = "Anne"
centered = false
offset = Vector2( 0, -2.49991 )

[node name="labelPlayer" type="Label" parent="."]
margin_top = 5.0
margin_right = 320.0
margin_bottom = 55.0
theme = ExtResource( 2 )
text = "Player   "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelInput" type="Label" parent="."]
margin_top = 55.0
margin_right = 320.0
margin_bottom = 95.0
theme = ExtResource( 2 )
text = " "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelCharacter" type="Label" parent="."]
visible = false
margin_top = 525.0
margin_right = 320.0
margin_bottom = 565.0
theme = ExtResource( 2 )
text = " "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelReady" type="Label" parent="."]
margin_top = 592.0
margin_right = 320.0
margin_bottom = 681.0
theme = ExtResource( 2 )
text = "Selecting
Character"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelDots" type="Label" parent="."]
margin_top = 667.0
margin_right = 320.0
margin_bottom = 697.0
theme = ExtResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrows" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Sprite" parent="arrows"]
texture = ExtResource( 8 )
offset = Vector2( -130, 0 )
flip_h = true

[node name="right" type="Sprite" parent="arrows"]
texture = ExtResource( 8 )
offset = Vector2( 130, 0 )

[node name="buttonRemove" type="Button" parent="."]
visible = false
margin_left = 285.0
margin_top = 7.0
margin_right = 314.0
margin_bottom = 27.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 720.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 4 )
anims/bounce = SubResource( 2 )
anims/idle = SubResource( 3 )

[connection signal="pressed" from="buttonRemove" to="." method="_on_buttonRemove_pressed"]
